Updated card positioning

--- a/index.html
+++ b/index.html
@@ -98,10 +98,25 @@
 
     .body {
       background-color: var(--verydarkblue);
+      display: flex;
+      flex-direction: row;
+    }
+
+    .full-grid-area {
+      display: flex;
+      flex-direction: column;
+      height: 530px;
+      width: auto;
+    }
+
+    .grid-top {
       display: grid;
-      grid-template-areas: 
-      'profile work play study'
-      'profile exercise social self-care';
+      grid-template-areas: 'work play study';
+    }
+
+    .grid-bottom {
+      display: grid;
+      grid-template-areas: 'exercise social self-care';
     }
 
     .smallcard {
@@ -110,33 +125,89 @@
       height: 265px;
       border-radius: 10px;
       margin-left: 10px;
-      display: flex;
-      flex-direction: column;
     }
 
     .smallcard-interior {
       background-color: var(--darkblue);
-      border-radius: 10px;
-      width: 100%;
-      height: 80%;
-      z-index: 10;
+      border-radius: 7px;
+      width: calc(100% - 60px);
+      height: calc(80% - 60px);
+      padding: 30px;
     }
     .smallcard-interior:hover {
       background-color: var(--desaturatedblue);
+      cursor: pointer;
     }
 
     .smallcard-image-box {
-      background-color: rebeccapurple;
       width: 100%;
-      height: 30%;
+      height: 20%;
+      display: flex;
+      flex-direction: row-reverse;
     }
 
-    .work { grid-area: 'work'; }
-    .play { grid-area: 'play'; }
-    .study { grid-area: 'study'; }
-    .study { grid-area: 'exercise'; }
-    .exercise { grid-area: 'social'; }
-    .self-care { grid-area: 'self-care'; }
+    .smallcard-topbar {
+      width: 100%;
+      height: 20%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .ellipsis {
+      height: 5px;
+    }
+    .ellipsis:hover {
+      color: aliceblue;
+    }
+
+    .activity-name {
+      font-size: 20px;
+      font-family: 'Rubik', sans-serif;
+      color: aliceblue;
+    }
+
+    .hrs {
+      font-size: 60px;
+      font-family: 'Rubik', sans-serif;
+      color: aliceblue;
+      margin: 0px;
+      margin-top: 5px;
+    }
+
+    .lastweekhrs {
+      font-size: 15px;
+      font-family: 'Rubik', sans-serif;
+      color: aliceblue;
+      margin: 0px;
+      margin-top: 5px;
+      font-weight: 300;
+    }
+
+    .work {
+      grid-area: 'work';
+      background-color: hsl(15, 100%, 70%);
+    } 
+    .play {
+      grid-area: 'play';
+      background-color: hsl(195, 74%, 62%);
+    }
+    .study {
+      grid-area: 'study';
+      background-color: hsl(348, 100%, 68%);
+    }
+    .exercise {
+      grid-area: 'exercise';
+      background-color: hsl(145, 58%, 55%);
+    }
+    .social {
+      grid-area: 'social';
+      background-color: hsl(264, 64%, 52%);
+    }
+    .self-care {
+      grid-area: 'self-care';
+      background-color: hsl(43, 84%, 65%);
+    }
   </style>
 </head>
 
@@ -156,102 +227,94 @@
     </div>
   </div>
 
-  <div class="work smallcard">
-    <div class="smallcard-image-box">
+  <div class="full-grid-area">
+    <div class="grid-top">
+      <div class="work smallcard work-colour">
+        <div class="smallcard-image-box">
+          <img src="./images/icon-work.svg" />
+        </div>
+        <div class="smallcard-interior">
+          <div class="smallcard-topbar">
+            <p class="activity-name">Work</p>
+            <img class="ellipsis" src="images/icon-ellipsis.svg" />
+          </div>
+          <p class="hrs">32hrs</p>
+          <p class="lastweekhrs">Last week - 36hrs</p>
+        </div>
+      </div>
 
+      <div class="play smallcard play-colour">
+        <div class="smallcard-image-box">
+          <img src="./images/icon-play.svg" />
+        </div>
+        <div class="smallcard-interior">
+          <div class="smallcard-topbar">
+            <p class="activity-name">Play</p>
+            <img class="ellipsis" src="images/icon-ellipsis.svg" />
+          </div>
+          <p class="hrs">32hrs</p>
+          <p class="lastweekhrs">Last week - 36hrs</p>
+        </div>
+      </div>
+
+      <div class="study smallcard study-colour">
+        <div class="smallcard-image-box">
+          <img src="./images/icon-study.svg" />
+        </div>
+        <div class="smallcard-interior">
+          <div class="smallcard-topbar">
+            <p class="activity-name">Study</p>
+            <img class="ellipsis" src="images/icon-ellipsis.svg" />
+          </div>
+          <p class="hrs">32hrs</p>
+          <p class="lastweekhrs">Last week - 36hrs</p>
+        </div>
+      </div>
     </div>
-    <div class="smallcard-interior">
-      a
+
+    <div class="grid-bottom">
+      <div class="exercise smallcard exercise-colour">
+        <div class="smallcard-image-box">
+          <img src="./images/icon-exercise.svg" />
+        </div>
+        <div class="smallcard-interior">
+          <div class="smallcard-topbar">
+            <p class="activity-name">Exercise</p>
+            <img class="ellipsis" src="images/icon-ellipsis.svg" />
+          </div>
+          <p class="hrs">32hrs</p>
+          <p class="lastweekhrs">Last week - 36hrs</p>
+        </div>
+      </div>
+
+      <div class="social smallcard social-colour">
+        <div class="smallcard-image-box">
+          <img src="./images/icon-social.svg" />
+        </div>
+        <div class="smallcard-interior">
+          <div class="smallcard-topbar">
+            <p class="activity-name">Social</p>
+            <img class="ellipsis" src="images/icon-ellipsis.svg" />
+          </div>
+          <p class="hrs">32hrs</p>
+          <p class="lastweekhrs">Last week - 36hrs</p>
+        </div>
+      </div>
+
+      <div class="self-care smallcard self-care-colour">
+        <div class="smallcard-image-box">
+          <img src="./images/icon-self-care.svg" />
+        </div>
+        <div class="smallcard-interior">
+          <div class="smallcard-topbar">
+            <p class="activity-name">Self Care</p>
+            <img class="ellipsis" src="images/icon-ellipsis.svg" />
+          </div>
+          <p class="hrs">32hrs</p>
+          <p class="lastweekhrs">Last week - 36hrs</p>
+        </div>
+      </div>
     </div>
-  </div>
-  Work
-  5hrs
-  <!-- daily -->
-  Previous - 7hrs
-  <!-- daily -->
-  32hrs
-  <!-- weekly -->
-  Previous - 36hrs
-  <!-- weekly -->
-  103hrs
-  <!-- monthly -->
-  Previous - 128hrs
-  <!-- monthly -->
-
-  Play
-  1hr
-  <!-- daily -->
-  Previous - 2hrs
-  <!-- daily -->
-  10hrs
-  <!-- weekly -->
-  Previous - 8hrs
-  <!-- weekly -->
-  23hrs
-  <!-- monthly -->
-  Previous - 29hrs
-  <!-- monthly -->
-
-  Study
-  0hrs
-  <!-- daily -->
-  Previous - 1hr
-  <!-- daily -->
-  4hrs
-  <!-- weekly -->
-  Previous - 7hrs
-  <!-- weekly -->
-  13hrs
-  <!-- monthly -->
-  Previous - 19hrs
-  <!-- monthly -->
-
-  Exercise
-  1hr
-  <!-- daily -->
-  Previous - 1hr
-  <!-- daily -->
-  4hrs
-  <!-- weekly -->
-  Previous - 5hrs
-  <!-- weekly -->
-  11hrs
-  <!-- monthly -->
-  Previous - 18hrs
-  <!-- monthly -->
-
-  Social
-  1hr
-  <!-- daily -->
-  Previous - 3hrs
-  <!-- daily -->
-  5hrs
-  <!-- weekly -->
-  Previous - 10hrs
-  <!-- weekly -->
-  21hrs
-  <!-- monthly -->
-  Previous - 23hrs
-  <!-- monthly -->
-
-  Self Care
-  0hrs
-  <!-- daily -->
-  Previous - 1hr
-  <!-- daily -->
-  2hrs
-  <!-- weekly -->
-  Previous - 2hrs
-  <!-- weekly -->
-  7hrs
-  <!-- monthly -->
-  Previous - 11hrs
-  <!-- monthly -->
-
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">ben read.</a>
-    Coded by <a href="#">a ham sandwich.</a>
   </div>
 </body>
 
