Fixed incorrect margin

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     .largecard {
       background-color: var(--darkblue); 
       width: 300px;
-      height: 530px;
+      height: 550px;
       border-radius: 10px;
       grid-area: 'profile';
     }
@@ -124,7 +124,8 @@
       width: 300px;
       height: 265px;
       border-radius: 10px;
-      margin-left: 10px;
+      margin-left: 20px;
+      margin-bottom: 20px;
     }
 
     .smallcard-interior {
