--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <title>The W</title>
+  <title>A Title Here</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
